k8s/final/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
spec:
  rules:
    - http:
        paths:
          - pathType: Prefix
            path: "/api"
            backend:
              service:
                name: server-srv
                port:
                  number: 3000
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: client-srv
                port:
                  number: 3000
